#119: Added bridge for torrent events